# good_guys

./: .gitignore  README.md  pyproject.toml
eyecu_good_guys/: __init__.py
eyecu_good_guys/layers/: GlobalAveragePooling2d.py  Inception.py  Reshape.py  SpatialMaxPooling2d.py  __init__.py
good_guys/: __init__.py
good_guys/activations/: Mish.py  __init__.py
good_guys/layers/: BiFPN.py  DepthwiseSeparableConvolution.py  Downsample2d.py  Downsample3d.py  InceptionMerge.py  TemporalConcatenation.py  __init__.py
good_guys/layers/basic/: Downsample1d.py  Downsample3d.py  GlobalAveragePooling1d.py  GlobalAveragePooling3d.py  __init__.py
good_guys/layers/complex/: Inception.py  MinibatchDiscrimination.py  __init__.py
good_guys/layers/convs/: BatchwiseConv2d.py  BatchwiseSeparableConv2d.py  DepthwiseSeparableConv2d.py  DepthwiseSeparableConv3d.py  DepthwiseSeparableUpsample2d.py  (+2 more)
good_guys/loss/: EarlyStopping.py  LSoftmax.py  LabelSmoothingLoss.py  __init__.py
good_guys/misc/: __init__.py
good_guys/models/: LSTM.md  LSTMCell.py  __init__.py
good_guys/utils/: __init__.py  double.py  triple.py
tests/: __init__.py  test_BatchwiseConv2d.py  test_BatchwiseSeparableConv2d.py  test_BiFPN.py  test_BidirectionalFeaturePyramidalNetwork.py  test_Bottleneck.py  test_DepthwiseSeparableConv2d.py  test_DepthwiseSeparableConv3d.py  test_DepthwiseSeparableConvolution.py  test_DepthwiseSeparableUpsample2d.py  test_EarlyStopping.py  test_FPN.py  test_Inception.py  test_InceptionMerge.py  test_LSTMCell.py  test_SpatialMaxPooling.py  test_TemporalDepthwiseSeparableConv2d.py
(+7 files in other folders)
