[tool.poetry]
name = "eyecu_good_guys"
version = "0.3.0"
description = ""
authors = ["Oguz Vuruskaner <ovuruska@outlook.com>"]
packages = [
    { include = "good_guys" }
]

[tool.poetry.dependencies]
python = "^3.5"
torch  = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

